--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dialogflow CX Testing Tool - Comprehensive testing platform for conversational agents" />
-    <title>Dialogflow CX Testing Tool</title>
+    <meta name="description" content="Conversational Agents Testing Tool - Comprehensive testing platform for conversational agents" />
+    <title>Conversational Agents Testing Tool</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
